--- a/index.html
+++ b/index.html
@@ -96,7 +96,9 @@ header p{
   display:flex;
   gap:8px;
   margin-top:6px;
+  align-items: center;
 }
+
 
 .input-group input{
   flex:1;
@@ -174,7 +176,7 @@ const produtos = [
   {
     nome: "Saca de Trigo",
     produz: 22,
-    imagem: "https://via.placeholder.com/400x200?text=Saca+de+Trigo",
+    imagem: "https://dummyimage.com/400x200?text=Saca+de+Trigo",
     materiais: [
       { nome: "Saca", qtd: 1 },
       { nome: "Trigo", qtd: 100 }
@@ -183,7 +185,7 @@ const produtos = [
   {
     nome: "Amido de Milho",
     produz: 16,
-    imagem: "https://via.placeholder.com/400x200?text=Amido+de+Milho",
+    imagem: "https://dummyimage.com/400x200?text=Amido+de+Milho",
     materiais: [
       { nome: "Moedor", qtd: 1 },
       { nome: "Embalagem", qtd: 1 },
@@ -193,7 +195,7 @@ const produtos = [
   {
     nome: "Álcool Industrial",
     produz: 16,
-    imagem: "https://via.placeholder.com/400x200?text=Alcool+Industrial",
+    imagem: "https://dummyimage.com/400x200?text=Alcool+Industrial",
     materiais: [
       { nome: "Cana de açúcar", qtd: 12 },
       { nome: "Tampa de garrafa", qtd: 5 },
@@ -203,7 +205,7 @@ const produtos = [
   {
     nome: "Saca de Banana",
     produz: 22,
-    imagem: "https://via.placeholder.com/400x200?text=Saca+de+Banana",
+    imagem: "https://dummyimage.com/400x200?text=Saca+de+Banana",
     materiais: [
       { nome: "Saca", qtd: 1 },
       { nome: "Banana", qtd: 100 }
@@ -212,7 +214,7 @@ const produtos = [
   {
     nome: "Álcool Artesanal",
     produz: 16,
-    imagem: "https://via.placeholder.com/400x200?text=Alcool+Artesanal",
+    imagem: "https://dummyimage.com/400x200?text=Alcool+Artesanal",
     materiais: [
       { nome: "Cana de açúcar", qtd: 10 },
       { nome: "Tampa de garrafa", qtd: 4 },
@@ -222,7 +224,7 @@ const produtos = [
   {
     nome: "Óleo de Milho",
     produz: 16,
-    imagem: "https://via.placeholder.com/400x200?text=Oleo+de+Milho",
+    imagem: "https://dummyimage.com/400x200?text=Oleo+de+Milho",
     materiais: [
       { nome: "Água", qtd: 1 },
       { nome: "Garrafa de vidro vazia", qtd: 3 },
@@ -232,7 +234,7 @@ const produtos = [
   {
     nome: "Levedura",
     produz: 16,
-    imagem: "https://via.placeholder.com/400x200?text=Levedura",
+    imagem: "https://dummyimage.com/400x200?text=Levedura",
     materiais: [
       { nome: "Água", qtd: 3 },
       { nome: "Trigo", qtd: 2 },
@@ -242,7 +244,7 @@ const produtos = [
   {
     nome: "Cinza Vegetal",
     produz: 16,
-    imagem: "https://via.placeholder.com/400x200?text=Cinza+Vegetal",
+    imagem: "https://dummyimage.com/400x200?text=Cinza+Vegetal",
     materiais: [
       { nome: "Carvão Vegetal", qtd: 8 },
       { nome: "Moedor", qtd: 1 }
@@ -251,7 +253,7 @@ const produtos = [
   {
     nome: "Pólvora",
     produz: 16,
-    imagem: "https://via.placeholder.com/400x200?text=Polvora",
+    imagem: "https://dummyimage.com/400x200?text=Polvora",
     materiais: [
       { nome: "Carvão vegetal", qtd: 8 },
       { nome: "Minério de salitre", qtd: 4 },
@@ -261,7 +263,7 @@ const produtos = [
   {
     nome: "Fardo de Leite Integral",
     produz: 16,
-    imagem: "https://via.placeholder.com/400x200?text=Leite+Integral",
+    imagem: "https://dummyimage.com/400x200?text=Leite+Integral",
     materiais: [
       { nome: "Fardo de Garrafa de vidro", qtd: 4 },
       { nome: "Tampa de garrafa", qtd: 4 },
