--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@ header p{
   flex-direction:column;
   gap:10px;
   box-shadow:0 15px 35px rgba(0,0,0,.45);
+  overflow: hidden;
 }
 
 .card img{
@@ -91,13 +92,24 @@ header p{
   font-size:13px;
   color:var(--muted);
 }
-
 .input-group{
-  display:flex;
-  gap:8px;
-  margin-top:6px;
+  display: flex;
+  gap: 8px;
+  margin-top: 6px;
   align-items: center;
+  width: 100%;
 }
+
+.input-group input{
+  flex: 1;
+  min-width: 0;
+}
+
+.input-group button{
+  flex-shrink: 0;
+  white-space: nowrap;
+}
+
 
 
 .input-group input{
